[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-issues-pr-export"
version = "1.1.0"
description = "Export GitHub issues and pull requests to deterministic Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Majkey25" }]
keywords = ["github", "issues", "pull-requests", "markdown", "export"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
attachments = ["playwright>=1.42.0"]

[project.urls]
Homepage = "https://majkey25.github.io/gh-issues-pr-export/"
Repository = "https://github.com/Majkey25/gh-issues-pr-export"
Issues = "https://github.com/Majkey25/gh-issues-pr-export/issues"

[project.scripts]
gh-issues-pr-export = "export_issues_prs:main"
gh-issues-pr-download-attachments = "download_attachments:main"
gh-issues-pr-cleanup-images = "cleanup_img_ext:main"

[tool.setuptools]
py-modules = ["cleanup_img_ext", "download_attachments", "export_issues_prs"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
exclude = [".reference", "build", "dist", "*.egg-info", "export"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
